--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,6 +99,7 @@ apply plugin: 'kotlin-android-extensions'
                 version "3.10.2"
             }
         }
+        namespace 'rocks.georgik.sdlapp'
     }
 /*}*/
 
